correcting the padding of the box 2 to get better on small screens

--- a/style.css
+++ b/style.css
@@ -225,7 +225,7 @@
         /* width: 320px; */
         height: 500px;
         --gutter-width: 12px;
-        padding-top: 88px;
+        padding-top: 100px;
         --content-height: 500px;
         --gutter-width: 12px;
         background-repeat: no-repeat;
